# netnode-web

./: .gitignore  ANGULAR_CLIENT_GUIDE.md  README.md  angular.json  package.json
.github/workflows/: release.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
src/app/chat/: chat.component.css  chat.component.css.map  chat.component.html  chat.component.scss  chat.component.ts
src/app/core/: crypto.service.ts  message.service.ts  netnode-init.ts  netnode.types.ts  notification.service.ts  presence.service.ts  stomp.service.ts  update.service.ts
src/environments/: environment.prod.ts  environment.ts
