[package]
name = "netnode"
version = "0.1.0"
edition = "2021"

[lib]
name = "netnode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
